# exploration

prediction/: README.md  main.py  pyproject.toml
prediction/data/: assess_decision_markets.jsonl  checked_decision_markets.jsonl  flagged_decision_markets.jsonl
