[project]
name = "exploration"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jupyter>=1.1.1",
    "matplotlib>=3.11.0",
    "numpy>=2.5.0",
    "pandas>=3.0.3",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "ruff>=0.15.19",
]
